--- a/app/views/aliens/show.html.erb
+++ b/app/views/aliens/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Planet:</strong>
+  <%= @alien.planet.name %>
+</p>
+
+<p>
   <strong>Age:</strong>
   <%= @alien.age %>
 </p>
