--- a/app/views/aliens/_form.html.erb
+++ b/app/views/aliens/_form.html.erb
@@ -15,6 +15,14 @@
     <%= form.label :name %>
     <%= form.text_field :name, id: :alien_name %>
   </div>
+  <div class="field">
+    <%= form.label :planet %>
+    <%= collection_select(:alien, :planet_id, Planet.all, :id, :name) %>
+  </div>
+  <div class="field">
+    <%= form.label :powers %>
+    <%= collection_check_boxes(:alien, :power_ids, Power.all, :id, :name) %>
+  </div>
 
   <div class="field">
     <%= form.label :age %>
