--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head> 
 
   <body>
+    <div id="menu">
+      <%= link_to "ALIENS", aliens_path %> 
+      <%= link_to "PLANETS", planets_path %> 
+      <%= link_to "POWERS", powers_path %>   
+    </div>
     <%= yield %> 
   </body>
 </html>
